fix collapsed element

--- a/styles/style.css
+++ b/styles/style.css
@@ -184,6 +184,13 @@ body {
     margin-bottom: 27px;
 }
 
+.collapsed {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+}
+
 .basket-checkbox-arrow {
     cursor: pointer;
 }
